--- a/index.html
+++ b/index.html
@@ -160,14 +160,12 @@
                             <li><a id="twitter" href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <!-- Instagram Button -->
                             <li><a id="instagram" href="https://instagram.com" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                            <!-- Pinterest Button -->
-                            <!-- <li><a id="pinterest" href="https://www.pinterest.com/brittanychiang/" target="_blank"><i class="fa fa-pinterest"></i></a></li> -->
                             <!-- Spotify Button -->
                             <li><a id="spotify" href="https://play.spotify.com" target="_blank"><i class="fa fa-spotify"></i></a></li>
                             <!-- GitHub Button -->
-                            <li><a id="github" href="https://github.com/bchiang7" target="_blank"><i class="fa fa-github"></i></a></li>
+                            <li><a id="github" href="https://github.com/akodangattil" target="_blank"><i class="fa fa-github"></i></a></li>
                             <!-- LinkedIn Button -->
-                            <li><a id="linkedin" href="https://www.linkedin.com/in/bchiang7" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a id="linkedin" href="https://www.linkedin.com/in/aditya-kodangattil-987208196/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                         <div class="page-scroll">
                             <a id="to-top" class="page-scroll" href="#page-top">
